--- a/index.html
+++ b/index.html
@@ -4,10 +4,158 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Helloo</h1>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <img src="images/landing/Full-Logo.png" alt="" />
+        </div>
+        <div class="nav">
+          <a href="#" class="nav_down">Download</a>
+          <a href="#" class="nav_help">Help</a>
+          <a href="#" class="nav_login">Log in</a>
+          <a href="#" class="nav_signup">Sign up</a>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <h1 class="main__heading">Open the world of music.</h1>
+      <h1 class="main_heading">It's all here.</h1>
+      <div class="main_btns">
+        <button class="btn btn-premium">Musicbox premium</button>
+        <button class="btn">Musicbox free</button>
+      </div>
+      <div class="main_cost">
+        1-month free trial <span class="blue-text">$7.99</span>/month after
+      </div>
+    </main>
+    <section class="flow">
+      <div class="container">
+        <div class="grid2">
+          <div class="grid2__left">
+            <div class="flow__img">
+              <img src="images/landing/Phone-Finder.png" alt="Phone-Finder" />
+            </div>
+          </div>
+          <div class="grid2__right">
+            <p class="flow__text">
+              <div class="flow__text-heading">
+                <img
+                  src="images/landing/flow-icon.png"
+                  alt=""
+                  class="flow__text-heading-img"
+                />
+                <h1 class="main__heading">Flow</h1>
+              </div>
+              <p class="text-box">                
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                  nam eaque necessitatibus labore omnis architecto blanditiis
+                  neque placeat nostrum laborum.                
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner">
+      <div class="container">
+        <div class="grid2">
+          <div class="grid2__left">
+            <h2 class="heading-secondary">Listen anytime, anywhere</h2>
+            <div class="text-box">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium hic nostrum beatae impedit aut?
+            </div>
+          </div>
+          <div class="grid2__right"></div>
+        </div>
+      </div>
+    </section>
+    <section class="find-music">
+      <div class="container">
+        <div class="grid2">
+          <div class="grid2__left">
+            <h2 class="heading-secondary">Find the music you want</h2>
+            <div class="text-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ut porro eum est deleniti necessitatibus dolores odio vero commodi animi!</div>
+          </div>
+          <div class="grid2__right">
+            <img src="images/landing/Mask1-landing.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="premium">
+      <h2 class="heading-secondary">Why go premium?</h2>
+      <div class="premium__features">
+        <div class="premium__features-card">
+          <div class="premium__features-card--img">
+            <img src="images/landing/Offline.png" alt="">
+          </div>
+          <div class="text-box">Offline mode.</div>
+          <div class="text-box-mini">Save and listen anywhere.</div>
+        </div>
+        <div class="premium__features-card">
+          <div class="premium__features-card--img">
+            <img src="images/landing/HQ.png" alt="">
+          </div>
+          <div class="text-box">High quality audio.</div>
+          <div class="text-box-mini">Enjoy the full range of sound.</div>
+        </div>
+        <div class="premium__features-card">
+          <div class="premium__features-card--img">
+            <img src="images/landing/No-ads.png" alt="">
+          </div>
+          <div class="text-box">No ads.</div>
+          <div class="text-box-mini">Enjoy nonstop music.</div>
+        </div>
+        <div class="premium__features-card">
+          <div class="premium__features-card--img">
+            <img src="images/landing/Skips.png" alt="">
+          </div>
+          <p class="text-box">Unlimited skips</p>
+          <p class="text-box-mini">Just tap skip.</p>
+        </div>
+      </div>
+      <h3 class="heading-tertiary">Listen free or subscribe to MusicBox Premium.</h3>
+      <div class="premium__cards">
+        <div class="grid2">
+          <div class="grid2__left">
+            <div class="premium__card premium__card-1">
+              <p class="text-box">MusicBox Free</p>
+              <h2 class="premium__card-value"><span class="premium__card-value-span">$0.00</span>/month</h2>
+              <ul>
+                <li><iclass="fa-solid fa-check"></i> Online listening</li>
+                <li><iclass="fa-solid fa-check"></i> Regular audio</li>
+                <li><iclass="fa-solid fa-check"></i> With advertising</li>
+                <li><iclass="fa-solid fa-check"></i> 30 skips per day</li>
+              </ul>
+            </div>
+            <button class="btn">get musicbox free</button>
+          </div>
+          <div class="grid2__right">
+            <div class="premium__card premium__card-2">
+              <p class="text-box">MusicBox Free</p>
+              <h2 class="premium__card-value"><span class="premium__card-value-span">$7.99</span>/month</h2>
+              <p class="text-box-mini">Start with 1-month free trial*</p>
+              <ul>
+                <li><iclass="fa-solid fa-check"></i> Online listening</li>
+                <li><iclass="fa-solid fa-check"></i> Regular audio</li>
+                <li><iclass="fa-solid fa-check"></i> With advertising</li>
+                <li><iclass="fa-solid fa-check"></i> 30 skips per day</li>
+              </ul>
+            </div>
+            <button class="btn btn-premium">get musicbox free</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        
+      </div>
+    </footer>
   </body>
 </html>
