landing feature deyarli tugadi qolgani ertaga

--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
-        <div class="logo">
-          <img src="images/landing/Full-Logo.png" alt="" />
-        </div>
-        <div class="nav">
-          <a href="#" class="nav_down">Download</a>
-          <a href="#" class="nav_help">Help</a>
-          <a href="#" class="nav_login">Log in</a>
-          <a href="#" class="nav_signup">Sign up</a>
-        </div>
+        <div class="header-content">
+          <div class="logo">
+            <img src="images/landing/Full-Logo.png" alt="" />
+          </div>
+          <div class="navbar">
+            <a href="#" class="nav nav_down">Download</a>
+            <a href="#" class="nav nav_help">Help</a>
+            <a href="#" class="nav nav_login">Log in</a>
+            <a href="#" class="nav nav_signup">Sign up</a>
+          </div>
+        </div>        
       </div>
     </header>
-    <main class="main">
-      <h1 class="main__heading">Open the world of music.</h1>
-      <h1 class="main_heading">It's all here.</h1>
+    <section class="main">
+      <div class="heading-box">
+        <h1 class="main__heading main__heading-1">Open the world of music.</h1>
+      <h1 class="main__heading main__heading-2">It's all here.</h1>
+      </div>
+      
       <div class="main_btns">
         <button class="btn btn-premium">Musicbox premium</button>
         <button class="btn">Musicbox free</button>
@@ -32,7 +37,7 @@
       <div class="main_cost">
         1-month free trial <span class="blue-text">$7.99</span>/month after
       </div>
-    </main>
+    </section>
     <section class="flow">
       <div class="container">
         <div class="grid2">
@@ -42,7 +47,7 @@
             </div>
           </div>
           <div class="grid2__right">
-            <p class="flow__text">
+            <div class="flow__text">
               <div class="flow__text-heading">
                 <img
                   src="images/landing/flow-icon.png"
@@ -82,7 +87,7 @@
             <div class="text-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ut porro eum est deleniti necessitatibus dolores odio vero commodi animi!</div>
           </div>
           <div class="grid2__right">
-            <img src="images/landing/Mask1-landing.png" alt="">
+            <img width="100%" src="images/landing/Mask1-landing.png" alt="">
           </div>
         </div>
       </div>
