--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -21,15 +27,15 @@
             <a href="#" class="nav nav_login">Log in</a>
             <a href="#" class="nav nav_signup">Sign up</a>
           </div>
-        </div>        
+        </div>
       </div>
     </header>
     <section class="main">
       <div class="heading-box">
         <h1 class="main__heading main__heading-1">Open the world of music.</h1>
-      <h1 class="main__heading main__heading-2">It's all here.</h1>
+        <h1 class="main__heading main__heading-2">It's all here.</h1>
       </div>
-      
+
       <div class="main_btns">
         <button class="btn btn-premium">Musicbox premium</button>
         <button class="btn">Musicbox free</button>
@@ -56,10 +62,10 @@
                 />
                 <h1 class="main__heading">Flow</h1>
               </div>
-              <p class="text-box">                
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
-                  nam eaque necessitatibus labore omnis architecto blanditiis
-                  neque placeat nostrum laborum.                
+              <p class="text-box">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                nam eaque necessitatibus labore omnis architecto blanditiis
+                neque placeat nostrum laborum.
               </p>
             </div>
           </div>
@@ -72,7 +78,8 @@
           <div class="grid2__left">
             <h2 class="heading-secondary">Listen anytime, anywhere</h2>
             <div class="text-box">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium hic nostrum beatae impedit aut?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Laudantium hic nostrum beatae impedit aut?
             </div>
           </div>
           <div class="grid2__right"></div>
@@ -84,10 +91,14 @@
         <div class="grid2">
           <div class="grid2__left">
             <h2 class="heading-secondary">Find the music you want</h2>
-            <div class="text-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ut porro eum est deleniti necessitatibus dolores odio vero commodi animi!</div>
+            <div class="text-box">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ut
+              porro eum est deleniti necessitatibus dolores odio vero commodi
+              animi!
+            </div>
           </div>
           <div class="grid2__right">
-            <img width="100%" src="images/landing/Mask1-landing.png" alt="">
+            <img width="100%" src="images/landing/Mask1-landing.png" alt="" />
           </div>
         </div>
       </div>
@@ -97,60 +108,84 @@
       <div class="premium__features">
         <div class="premium__features-card">
           <div class="premium__features-card--img">
-            <img src="images/landing/Offline.png" alt="">
+            <img src="images/landing/Offline.png" alt="" />
           </div>
           <div class="text-box">Offline mode.</div>
           <div class="text-box-mini">Save and listen anywhere.</div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
-            <img src="images/landing/HQ.png" alt="">
+            <img src="images/landing/HQ.png" alt="" />
           </div>
           <div class="text-box">High quality audio.</div>
           <div class="text-box-mini">Enjoy the full range of sound.</div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
-            <img src="images/landing/No-ads.png" alt="">
+            <img src="images/landing/No-ads.png" alt="" />
           </div>
           <div class="text-box">No ads.</div>
           <div class="text-box-mini">Enjoy nonstop music.</div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
-            <img src="images/landing/Skips.png" alt="">
+            <img src="images/landing/Skips.png" alt="" />
           </div>
           <p class="text-box">Unlimited skips</p>
           <p class="text-box-mini">Just tap skip.</p>
         </div>
       </div>
-      <h3 class="heading-tertiary">Listen free or subscribe to MusicBox Premium.</h3>
+      <h3 class="heading-tertiary">
+        Listen free or subscribe to MusicBox
+        <span class="gradient-text">Premium.</span>
+      </h3>
       <div class="premium__cards">
         <div class="grid2">
           <div class="grid2__left">
             <div class="premium__card premium__card-1">
               <p class="text-box">MusicBox Free</p>
-              <h2 class="premium__card-value"><span class="premium__card-value-span">$0.00</span>/month</h2>
+              <h2 class="premium__card-value">
+                <span class="premium__card-value-span">$0.00</span>/month
+              </h2>
+              <p class="text-box-mini">&nbsp;</p>
               <ul>
-                <li><iclass="fa-solid fa-check"></i> Online listening</li>
-                <li><iclass="fa-solid fa-check"></i> Regular audio</li>
-                <li><iclass="fa-solid fa-check"></i> With advertising</li>
-                <li><iclass="fa-solid fa-check"></i> 30 skips per day</li>
+                <li><i class="fa-solid fa-check"></i> Online listening</li>
+                <li><i class="fa-solid fa-check"></i> Regular audio</li>
+                <li><i class="fa-solid fa-check"></i> With advertising</li>
+                <li><i class="fa-solid fa-check"></i> 30 skips per day</li>
               </ul>
             </div>
             <button class="btn">get musicbox free</button>
           </div>
           <div class="grid2__right">
             <div class="premium__card premium__card-2">
-              <p class="text-box">MusicBox Free</p>
-              <h2 class="premium__card-value"><span class="premium__card-value-span">$7.99</span>/month</h2>
-              <p class="text-box-mini">Start with 1-month free trial*</p>
-              <ul>
-                <li><iclass="fa-solid fa-check"></i> Online listening</li>
-                <li><iclass="fa-solid fa-check"></i> Regular audio</li>
-                <li><iclass="fa-solid fa-check"></i> With advertising</li>
-                <li><iclass="fa-solid fa-check"></i> 30 skips per day</li>
-              </ul>
+              <div class="premium__card-2-content">
+                <p class="text-box">MusicBox Premium</p>
+                <h2 class="premium__card-value">
+                  <span class="premium__card-value-span gradient-text"
+                    >$7.99</span
+                  >/month
+                </h2>
+                <p class="text-box-mini">Start with 1-month free trial*</p>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-check gradient-text"></i> Online
+                    listening
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check gradient-text"></i> Regular
+                    audio
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check gradient-text"></i> With
+                    advertising
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check gradient-text"></i> 30 skips per
+                    day
+                  </li>
+                </ul>
+              </div>
             </div>
             <button class="btn btn-premium">get musicbox free</button>
           </div>
@@ -158,9 +193,7 @@
       </div>
     </section>
     <footer>
-      <div class="container">
-        
-      </div>
+      <div class="container"></div>
     </footer>
   </body>
 </html>
