--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         <div class="grid2">
           <div class="grid2__left">
             <div class="flow__img">
-              <img src="images/landing/Phone-Finder.png" alt="Phone-Finder" />
+              <img
+                class="skewing"
+                src="images/landing/Phone-Finder.png"
+                alt="Phone-Finder"
+              />
             </div>
           </div>
           <div class="grid2__right">
@@ -98,7 +102,12 @@
             </div>
           </div>
           <div class="grid2__right">
-            <img width="100%" src="images/landing/Mask1-landing.png" alt="" />
+            <img
+              class="skewing"
+              width="100%"
+              src="images/landing/Mask1-landing.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -187,7 +196,7 @@
                 </ul>
               </div>
             </div>
-            <button class="btn btn-premium">get musicbox free</button>
+            <button class="btn btn-premium">get musicbox premium</button>
           </div>
         </div>
       </div>
@@ -195,5 +204,6 @@
     <footer>
       <div class="container"></div>
     </footer>
+    <script src="./main.js"></script>
   </body>
 </html>
