--- a/index.html
+++ b/index.html
@@ -201,8 +201,62 @@
         </div>
       </div>
     </section>
-    <footer>
-      <div class="container"></div>
+    <footer class="footer">
+      <div class="container footer_grid">
+        <div class="footer__logo">
+          <div class="footer__logo-img">
+            <img src="./images/landing/Full-Logo.png" alt="" />
+          </div>
+          <div class="footer__logo_ads footer__logo_ads-1">
+            <p>Legal</p>
+            <p>Privacy</p>
+            <p>Cookies</p>
+            <p>Ads</p>
+          </div>
+        </div>
+        <div class="footer__1">
+          <h3 class="heading-tertiary">MUSICBOX</h3>
+          <a href="#" class="footer-link">About</a>
+          <a href="#" class="footer-link">Premium</a>
+          <a href="#" class="footer-link">Features</a>
+        </div>
+        <div class="footer__1">
+          <h3 class="heading-tertiary">COMMUNITES</h3>
+          <a href="#" class="footer-link">For Artists</a>
+          <a href="#" class="footer-link">Developer</a>
+          <a href="#" class="footer-link">Press</a>
+        </div>
+        <div class="footer__1">
+          <h3 class="heading-tertiary">USEFUL LINKS</h3>
+          <a href="#" class="footer-link">Help</a>
+          <a href="#" class="footer-link">Web Player</a>
+          <a href="#" class="footer-link">Explore Channels</a>
+          <a href="#" class="footer-link">Download App</a>
+        </div>
+        <div class="footer__social">
+          <div class="footer__social-links">
+            <a href="#" class="footer__social-links-1">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#" class="footer__social-links-1">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" class="footer__social-links-1">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+          <div class="footer__social-links-2">
+            <select name="language" id="" class="language">
+              <option value="english">English(us)</option>
+              <option value="english">Pyccкий(ru)</option>
+              <option value="english">O`zbek(uz)</option>
+            </select>
+            <div class="footer__copyrights">
+              <p>&copy; 2022 MusicBox</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="./main.js"></script>
   </body>
