images imported genre page

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body class="home__page">
     <div class="header header2">
@@ -514,6 +514,7 @@
             <i class="fa-solid fa-backward-step"></i>
             <i class="fa-solid fa-pause"></i>
             <i class="fa-solid fa-forward-step"></i>
+            <i class="fa-solid fa-repeat"></i>
           </div>
           <div class="player__control-minute">
             <p class="player__control-minute-start">2:05</p>
@@ -524,7 +525,8 @@
       <div class="player__right">
         <a href="#" class="player__right-playlist"><i class="fa-solid fa-list-music"></i></a>
         <div class="player__volume">
-          <i class="fa-solid fa-volume-high"></i>
+          <input type="checkbox" name="s" id="volumee" class="volumee">
+          <label for="volumee" class="kalonka"><div class="mute"></div> <i class="fa-solid fa-volume-high"></i></label>
           <span class="volume-degree"></span>
         </div>  
       </div>
