--- a/genre.html
+++ b/genre.html
@@ -14,5 +14,144 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="page_genre"></body>
+  <body class="page_genre">
+    <div class="header header2">
+      <div class="header-content">
+        <div class="logo2">
+          <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
+          <a class="logo2_link logo2__browse" href="#">Home</a>
+          <a class="logo2_link logo2__library" href="#">Library</a>
+          <a href="#" class="logo2_link logo2__home current">Browse</a>
+        </div>
+        <div class="header-center">
+          <a href="#" class="header-center-link active-page">Genres & Moods</a>
+          <a href="#" class="header-center-link">New Releases</a>
+          <a href="#" class="header-center-link">Podcasts</a>
+        </div>
+        <div class="logo2__search">
+          <input type="search" placeholder="Search" class="nav__search" />
+          <div class="nav_icon"><i class="fa-solid fa-user"></i></div>
+          <select name="language" id="" class="language">
+            <option value="english">JohnDoe</option>
+            <option value="english">Jonibek</option>
+            <option value="english">Munirov</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <section class="genre">
+      <div class="container">
+        <div class="section-header">
+          <h3 class="section-header-txt">
+            Genre
+            <p class="section-header-txt-info">Explore by genre and mood</p>
+          </h3>
+        </div>
+        <div class="grid6 genre_content">
+          <div class="card-recent">
+            <img src="images/HIP - HOP.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/POP.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/rock.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/Country.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/DANCE-ELECTRO.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/Indie.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/LATIN.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/K-POP.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/METAl.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/R&B.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/DECADES.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/Classical.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/JAZZ.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/Instrumentals.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/PUNK.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/BLUES.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/SOUL FUNK.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/REGGAE.png" alt="" class="card-flow-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="genre">
+      <div class="container">
+        <div class="section-header">
+          <h3 class="section-header-txt">
+            Moods
+            <p class="section-header-txt-info">Explore by genre and mood</p>
+          </h3>
+        </div>
+        <div class="grid6 genre_content">
+          <div class="card-recent">
+            <img src="images/PARTY.png" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/CHILL.png" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/WORKOUT.png" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/FOCUS.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/DRIVING.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/RAINY DAY.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/ROMANCE.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/SLEEP.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/COMEDY.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/FAMILY.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/DINNER.png" alt="" class="card-flow-img" />
+          </div>
+          <div class="card-recent">
+            <img src="images/TRAVEL.png" alt="" class="card-flow-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
