podcast page finished

--- a/home.html
+++ b/home.html
@@ -19,9 +19,10 @@
       <div class="header-content">
         <div class="logo2">
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
-          <a class="logo2_link logo2__browse" href="#">Browse</a>
-          <a class="logo2_link logo2__library" href="#">Library</a>
           <a href="#" class="logo2_link logo2__home current">Home</a>
+          
+          <a class="logo2_link logo2__library" href="#">Library</a>
+         <a class="logo2_link logo2__browse" href="genre.html">Browse</a>
         </div>
         <div class="logo2__search">
           <input type="search" placeholder="Search" class="nav__search" />
