--- a/genre.html
+++ b/genre.html
@@ -19,14 +19,14 @@
       <div class="header-content">
         <div class="logo2">
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
-          <a class="logo2_link logo2__browse" href="#">Home</a>
+          <a class="logo2_link logo2__browse" href="home.html">Home</a>
           <a class="logo2_link logo2__library" href="#">Library</a>
           <a href="#" class="logo2_link logo2__home current">Browse</a>
         </div>
         <div class="header-center">
           <a href="#" class="header-center-link active-page">Genres & Moods</a>
           <a href="#" class="header-center-link">New Releases</a>
-          <a href="#" class="header-center-link">Podcasts</a>
+          <a href="podcast.html" class="header-center-link">Podcasts</a>
         </div>
         <div class="logo2__search">
           <input type="search" placeholder="Search" class="nav__search" />
