podcast page finished

--- a/genre.html
+++ b/genre.html
@@ -54,9 +54,10 @@
           <div class="card-recent">
             <img src="images/POP.png" alt="" class="card-flow-img" />
           </div>
-          <div class="card-recent">
-            <img src="images/rock.png" alt="" class="card-flow-img" />
-          </div>
+          <a href="rock.html">
+            <div class="card-recent">
+              <img src="images/rock.png" alt="" class="card-flow-img" /></div
+          ></a>
           <div class="card-recent">
             <img src="images/Country.png" alt="" class="card-flow-img" />
           </div>
