--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#" class="nav nav_down">Download</a>
             <a href="#" class="nav nav_help">Help</a>
             <a href="#" class="nav nav_login">Log in</a>
-            <a href="#" class="nav nav_signup">Sign up</a>
+            <a href="home.html" class="nav nav_signup">Sign up</a>
           </div>
         </div>
       </div>
