--- a/podcast-page.html
+++ b/podcast-page.html
@@ -75,7 +75,84 @@
           <p class="followers">87,444 FOLLOWERS</p>
         </div>
       </div>
+      <div class="musics-box">
+        <div class="search-music">
+          <div class="search-music-input">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="search" name="#" id="#" placeholder="Search episode">
+          </div>
+          
+          <a href="#" class="search-setting"><i class="fa-solid fa-ellipsis"></i
+            ></a>
+        </div>
+        <div class="music__list">
+          <div class="music__list-tip">
+            <div class="music__list-icon"></div>
+          <div class="music__list-title"><h3 class="music__list-title-top">TITLE</h3> </div>
+          <div class="music__list-progress"><h3 class="music__list-title-top">PROGRESS</h3></div>
+          <div class="music__list-upload-time"><h3 class="music__list-title-top">UPLOAD TIME</h3></div>
+          <div class="music__list-time"><h3 class="music__list-title-top">TIME</h3></div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
+          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+          <div class="music__list-content-upload-time">22/03/19</div>
+          <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
+          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+          <div class="music__list-content-upload-time">22/03/19</div>
+          <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content currently-playing-music">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
+          <div class="music__list-content-progress"><span class="music__list-content-progress-status now-playing"></span> </div>
+          <div class="music__list-content-upload-time">22/03/19</div>
+          <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content ">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
+          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+          <div class="music__list-content-upload-time">22/03/19</div>
+          <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+            <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+              <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+                PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> 
+              </div>
+            <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
+            <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
+              <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
+                PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> 
+              </div>
+            <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+        </div>
+      </div>
     </div>
+
     <section class="player">
       <div class="player__music">
         <div class="player__music-img">
