--- a/podcast.html
+++ b/podcast.html
@@ -134,17 +134,19 @@
               <h3 class="card-recent-text-likes">TED</h3>
             </div>
           </div>
-          <div class="card-recent">
-            <img
-              src="images/startalk.png"
-              alt="dont eat monster"
-              class="card-recent-img"
-            />
-            <div class="card-recent-text">
-              <h3 class="card-recent-text-heading">StarTalk Radio Show</h3>
-              <h3 class="card-recent-text-likes">Neil deGrasse Tyson</h3>
-            </div>
-          </div>
+          <a href="podcast-page.html">
+            <div class="card-recent">
+              <img
+                src="images/startalk.png"
+                alt="dont eat monster"
+                class="card-recent-img"
+              />
+              <div class="card-recent-text">
+                <h3 class="card-recent-text-heading">StarTalk Radio Show</h3>
+                <h3 class="card-recent-text-likes">Neil deGrasse Tyson</h3>
+              </div>
+            </div></a
+          >
           <div class="card-recent">
             <img src="images/startup.png" class="card-recent-img" />
             <div class="card-recent-text">
