--- a/rock.html
+++ b/rock.html
@@ -47,7 +47,7 @@
           <a href="genre.html" class="header-center-link active-page"
             >OVERVIEW</a
           >
-          <a href="#" class="header-center-link">PLAYLISTS</a>
+          <a href="rock-playlist.html" class="header-center-link">PLAYLISTS</a>
           <a href="#" class="header-center-link">NEW RELEASES</a>
           <a href="#" class="header-center-link">ARTISTS</a>
         </div>
