new releases page finished

--- a/podcast.html
+++ b/podcast.html
@@ -25,7 +25,9 @@
         </div>
         <div class="header-center">
           <a href="genre.html" class="header-center-link">Genres & Moods</a>
-          <a href="#" class="header-center-link">New Releases</a>
+          <a href="new-releases.html" class="header-center-link"
+            >New Releases</a
+          >
           <a href="#" class="header-center-link active-page">Podcasts</a>
         </div>
         <div class="logo2__search">
