my playlist finished

--- a/playlist.html
+++ b/playlist.html
@@ -256,7 +256,7 @@
       <div class="container">
         <div class="section-header">
           <h3 class="section-header-txt">
-            Artists
+           Featured Artists
           </h3>
           <div class="section-header-right">
             <a href="#" class="setting-button"
@@ -310,8 +310,9 @@
               </h3>
             </div>
          </div>
-          <div class="card-recent square-card" >
-            <img src="images/image228.png" alt="" class="card-recent-img" />
+         <a href="artist.html"> 
+           <div class="card-recent square-card" >
+            <img src="images/Bowie.png" alt="" class="card-recent-img" />
             <div class="card-playlist-text">
               <h3 class="card-recent-text-heading">The Velvet Underground</h3>
               <h3 class="card-recent-text-likes">
@@ -319,6 +320,7 @@
               </h3>
             </div>
          </div>
+        </a>
         </div>
       </div>
     </section>
