--- a/artist.html
+++ b/artist.html
@@ -157,7 +157,10 @@
           </div>
         </div>
       </div>
-</div>
+      <div class="btn-section">
+        <a href="#" class="btn">Show More</a>
+      </div>
+    </div>
 <section class="podcast__recently">
   <div class="container">
     <div class="section-header">
