--- a/genre.html
+++ b/genre.html
@@ -20,12 +20,16 @@
         <div class="logo2">
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
           <a class="logo2_link logo2__browse" href="home.html">Home</a>
-          <a class="logo2_link logo2__library" href="#">Library</a>
-          <a href="#" class="logo2_link logo2__home current">Browse</a>
+          <a class="logo2_link logo2__library" href="my-playlist.html"
+            >Library</a
+          >
+          <a href="genre.html" class="logo2_link logo2__home current">Browse</a>
         </div>
         <div class="header-center">
           <a href="#" class="header-center-link active-page">Genres & Moods</a>
-          <a href="#" class="header-center-link">New Releases</a>
+          <a href="new-releases.html" class="header-center-link"
+            >New Releases</a
+          >
           <a href="podcast.html" class="header-center-link">Podcasts</a>
         </div>
         <div class="logo2__search">
