--- a/podcast-page.html
+++ b/podcast-page.html
@@ -79,73 +79,160 @@
         <div class="search-music">
           <div class="search-music-input">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="search" name="#" id="#" placeholder="Search episode">
+            <input type="search" name="#" id="#" placeholder="Search episode" />
           </div>
-          
-          <a href="#" class="search-setting"><i class="fa-solid fa-ellipsis"></i
-            ></a>
+
+          <a href="#" class="search-setting"
+            ><i class="fa-solid fa-ellipsis"></i
+          ></a>
         </div>
         <div class="music__list">
           <div class="music__list-tip">
             <div class="music__list-icon"></div>
-          <div class="music__list-title"><h3 class="music__list-title-top">TITLE</h3> </div>
-          <div class="music__list-progress"><h3 class="music__list-title-top">PROGRESS</h3></div>
-          <div class="music__list-upload-time"><h3 class="music__list-title-top">UPLOAD TIME</h3></div>
-          <div class="music__list-time"><h3 class="music__list-title-top">TIME</h3></div>
+            <div class="music__list-title">
+              <h3 class="music__list-title-top">TITLE</h3>
+            </div>
+            <div class="music__list-progress">
+              <h3 class="music__list-title-top">PROGRESS</h3>
+            </div>
+            <div class="music__list-upload-time">
+              <h3 class="music__list-title-top">UPLOAD TIME</h3>
+            </div>
+            <div class="music__list-time">
+              <h3 class="music__list-title-top">TIME</h3>
+            </div>
           </div>
           <div class="music__list-content">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
-          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
-          <div class="music__list-content-upload-time">22/03/19</div>
-          <div class="music__list-content-time">49:45</div>
-          </div>
-          <div class="music__list-content">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
-          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
-          <div class="music__list-content-upload-time">22/03/19</div>
-          <div class="music__list-content-time">49:45</div>
-          </div>
-          <div class="music__list-content currently-playing-music">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
-          <div class="music__list-content-progress"><span class="music__list-content-progress-status now-playing"></span> </div>
-          <div class="music__list-content-upload-time">22/03/19</div>
-          <div class="music__list-content-time">49:45</div>
-          </div>
-          <div class="music__list-content ">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-          <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-          <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-            PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> </div>
-          <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
-          <div class="music__list-content-upload-time">22/03/19</div>
-          <div class="music__list-content-time">49:45</div>
-          </div>
-          <div class="music__list-content">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-            <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-              <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-                PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> 
-              </div>
-            <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span class="music__list-content-progress-status"></span>
+            </div>
             <div class="music__list-content-upload-time">22/03/19</div>
             <div class="music__list-content-time">49:45</div>
           </div>
           <div class="music__list-content">
-            <div class="music__list-content-icon"><i class="fa-solid fa-podcast"></i></div>
-            <div class="music__list-content-title"><h3 class="music__list-content-title-1">Cosmic Queries - Neuroscience</h3>
-              <p class="music__list-content-title-2">Psychodelic drugs, dreams, mental health awareness, understanding our reality, and more - Neil deGrasse Tyson, neuroscientist Heather Berlin, 
-                PhD, and first-time comic co-host Jackie Hoffman answerquestions. NOTE: StarTalk All-Access subscribers...</p> 
-              </div>
-            <div class="music__list-content-progress"><span class="music__list-content-progress-status"></span> </div>
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span class="music__list-content-progress-status"></span>
+            </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content currently-playing-music">
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span
+                class="music__list-content-progress-status now-playing"
+              ></span>
+            </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span class="music__list-content-progress-status"></span>
+            </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span class="music__list-content-progress-status"></span>
+            </div>
+            <div class="music__list-content-upload-time">22/03/19</div>
+            <div class="music__list-content-time">49:45</div>
+          </div>
+          <div class="music__list-content">
+            <div class="music__list-content-icon">
+              <i class="fa-solid fa-podcast"></i>
+            </div>
+            <div class="music__list-content-title">
+              <h3 class="music__list-content-title-1">
+                Cosmic Queries - Neuroscience
+              </h3>
+              <p class="music__list-content-title-2">
+                Psychodelic drugs, dreams, mental health awareness,
+                understanding our reality, and more - Neil deGrasse Tyson,
+                neuroscientist Heather Berlin, PhD, and first-time comic co-host
+                Jackie Hoffman answerquestions. NOTE: StarTalk All-Access
+                subscribers...
+              </p>
+            </div>
+            <div class="music__list-content-progress">
+              <span class="music__list-content-progress-status"></span>
+            </div>
             <div class="music__list-content-upload-time">22/03/19</div>
             <div class="music__list-content-time">49:45</div>
           </div>
@@ -156,37 +243,43 @@
     <section class="player">
       <div class="player__music">
         <div class="player__music-img">
-          <img src="images/icanfly.jpg" alt="">
+          <img src="images/icanfly.jpg" alt="" />
         </div>
         <div class="player__music-about">
           <p class="player__music-name">I can Fly</p>
           <p class="player__music-singer">Xcho</p>
         </div>
-        <input type="checkbox" name="ss" id="likee" class="likee">
-        <label for="likee" class="player__music-like"><i class="fa-solid fa-heart"></i> <i class="fa-solid fa-check blue-text"></i></>
+        <input type="checkbox" name="ss" id="likee" class="likee" />
+        <label for="likee" class="player__music-like"
+          ><i class="fa-solid fa-heart"></i>
+          <i class="fa-solid fa-check blue-text"></i>
         </label>
-        </div>
+      </div>
       <div class="player__control">
-          <div class="player__control-top">
-            <i class="fa-solid fa-shuffle"></i>
-            <i class="fa-solid fa-backward-step"></i>
-            <i class="fa-solid fa-pause"></i>
-            <i class="fa-solid fa-forward-step"></i>
-            <i class="fa-solid fa-repeat"></i>
-          </div>
-          <div class="player__control-minute">
-            <p class="player__control-minute-start">2:05</p>
-            <span class="status"></span>
-            <p class="player__control-minute-end">4:26</p>
-          </div>
+        <div class="player__control-top">
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward-step"></i>
+          <i class="fa-solid fa-pause"></i>
+          <i class="fa-solid fa-forward-step"></i>
+          <i class="fa-solid fa-repeat"></i>
+        </div>
+        <div class="player__control-minute">
+          <p class="player__control-minute-start">2:05</p>
+          <span class="status"></span>
+          <p class="player__control-minute-end">4:26</p>
+        </div>
       </div>
       <div class="player__right">
-        <a href="#" class="player__right-playlist"><i class="fa-solid fa-list-music"></i></a>
+        <a href="#" class="player__right-playlist"
+          ><i class="fa-solid fa-list-music"></i
+        ></a>
         <div class="player__volume">
-          <input type="checkbox" name="s" id="volumee" class="volumee">
-          <label for="volumee" class="kalonka"><div class="mute"></div> <i class="fa-solid fa-volume-high"></i></label>
+          <input type="checkbox" name="s" id="volumee" class="volumee" />
+          <label for="volumee" class="kalonka"
+            ><span class="mute"></span> <i class="fa-solid fa-volume-high"></i
+          ></label>
           <span class="volume-degree"></span>
-        </div>  
+        </div>
       </div>
     </section>
   </body>
