--- a/rock.html
+++ b/rock.html
@@ -21,7 +21,7 @@
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
           <a href="home.html" class="logo2_link logo2__home">Home</a>
 
-          <a class="logo2_link logo2__library" href="#">Library</a>
+          <a class="logo2_link logo2__library" href="my-playlist.html">Library</a>
           <a class="logo2_link logo2__browse current" href="genre.html"
             >Browse</a
           >
@@ -168,7 +168,7 @@
               </h3>
             </div>
           </div>
-          <div class="card-recent">
+         <a href="./playlist.html"> <div class="card-recent">
             <img src="images/activemusic.png" alt="" class="card-recent-img" />
             <div class="card-recent-text">
               <h3 class="card-recent-text-heading">Nature Song</h3>
@@ -176,7 +176,7 @@
                 <i class="fa-solid fa-heart"></i>&nbsp; 127,723
               </h3>
             </div>
-          </div>
+          </div></a>
           <div class="card-recent">
             <img src="images/ROCK ballads.png" alt="" class="card-recent-img" />
             <div class="card-recent-text">
