--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
           <a href="#" class="logo2_link logo2__home current">Home</a>
           
-          <a class="logo2_link logo2__library" href="#">Library</a>
+          <a class="logo2_link logo2__library" href="my-playlist.html">Library</a>
          <a class="logo2_link logo2__browse" href="genre.html">Browse</a>
         </div>
         <div class="logo2__search">
