--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       <div class="header-content">
         <div class="logo2">
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
-          <a href="#" class="logo2_link logo2__home current">Home</a>
+          <a href="home.html" class="logo2_link logo2__home current">Home</a>
           
           <a class="logo2_link logo2__library" href="my-playlist.html">Library</a>
          <a class="logo2_link logo2__browse" href="genre.html">Browse</a>
