--- a/listening-history.html
+++ b/listening-history.html
@@ -20,8 +20,10 @@
         <div class="logo2">
           <img class="logo2__img" src="images/landing/Full-Logo.png" alt="" />
           <a class="logo2_link logo2__browse" href="home.html">Home</a>
-          <a class="logo2_link logo2__library current" href="#">Library</a>
-          <a href="#" class="logo2_link logo2__home">Browse</a>
+          <a class="logo2_link logo2__library current" href="my-playlist.html"
+            >Library</a
+          >
+          <a href="genre.html" class="logo2_link logo2__home">Browse</a>
         </div>
         <div class="header-center">
           <a href="my-playlist.html" class="header-center-link">Playlists</a>
