--- a/listening-history.html
+++ b/listening-history.html
@@ -27,8 +27,8 @@
         </div>
         <div class="header-center">
           <a href="my-playlist.html" class="header-center-link">Playlists</a>
-          <a href="my-album.html" class="header-center-link">Albums</a>
-          <a href="my-artist.html" class="header-center-link">Artists</a>
+          <a href="album.html" class="header-center-link">Albums</a>
+          <a href="artist.html" class="header-center-link">Artists</a>
           <a href="my-podcast.html" class="header-center-link podcast--title"
             >Podcasts</a
           >
