--- a/my-podcast.html
+++ b/my-podcast.html
@@ -26,8 +26,8 @@
         <div class="header-center">
           
           <a href="my-playlist.html" class="header-center-link">Playlists</a>
-          <a href="my-album.html" class="header-center-link">Albums</a>
-          <a href="my-artist.html" class="header-center-link">Artists</a>
+          <a href="album.html" class="header-center-link">Albums</a>
+          <a href="artist.html" class="header-center-link">Artists</a>
           <a href="my-podcast.html" class="header-center-link podcast--title active-page">Podcasts</a>
           <a href="listening-history.html" class="header-center-link">Listening History</a>
         </div>
